# libdeck

./: .gitignore  AUTHORS  ChangeLog  Makefile  README.md  TODO  card.c  card.h  collection.c  collection.h  combination.c  configure.ac  configure.in  cscope.out  deck.c  deck.h  libdeck.c  libdeck.h  poker.c  poker.h  print.c  print.h  testapp.c  util.c  util.h
src/: Makefile.am  card.h  collection.c  combination.c  combination.h  libdeck.c  libdeck.h  poker.c  poker.h  print.c  print.h  testapp.c  util.c  util.h
